# wordle-solver-app

./: .gitignore  README.md  package-lock.json  package.json
crate/: Cargo.toml
crate/src/: lib.rs
src/: index.html  index.js  styles.scss  words.json
src/components/: App.svelte  Row.svelte
wordle_solver/: Cargo.toml
wordle_solver/src/: lib.rs
