[package]
version = "1.0.0"
name = "wordle_solver"
authors = ["Simon Gomizelj"]
description = "Wordle Solver"
license = "Unlicense"
readme = "../README.md"
repository = "https://github.com/vodik/wordle-app"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
